--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -105,6 +105,7 @@
   display: inline-block;
   margin-top: 2.5rem;
   vertical-align: middle;
+  margin-bottom: 2.5rem;
   color: $primary;
   border: 1px solid $primary;
   border-radius: 5px;
