--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -2,16 +2,25 @@
   display: none;
 }
 
+
+
 .modal {
   background-color: $primary;
   position: absolute;
   z-index: 100;
-  max-width: 490px;
-  min-height: 605px;
+  width: 490px;
+  height: 605px;
   top: 13.5rem;
   left: 50%;
   width: 49rem;
   transform: translate(-50%, 00%);
+}
+
+.modal--nojs {
+  display: block;
+  width: 1920px;
+  height: 100vh;
+  top: 0;
 }
 
 .modal__wrapper {
@@ -82,6 +91,7 @@
 .modal__form button {
   width: 100%;
   grid-column: span 2;
+  grid-row: 4;
 }
 
 .modal__form input[type="checkbox"]:checked + span {
@@ -113,8 +123,8 @@
   width: 100%;
 }
 
-.modal__form label:last-child {
-  max-width: 32rem;
+.modal__form label:nth-child(7n) {
+  max-width: 36rem;
   margin-top: -0.5rem;
-  margin-left: 5rem;
+  margin-left: 0;
 }
