--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -173,12 +173,13 @@
 
 .services__item h3 {
   font-family: "Roboto Condensed", "Arial", sans-serif;
-  max-width: 28rem;
+  max-width: 30rem;
   font-size: 20px;
   line-height: 30px;
   padding-top: 5rem;
   margin: 0 auto;
   color: white;
+  padding-left: 1rem;
 
   @media (max-width: $tablet-width) {
     margin-left: 4rem;
@@ -188,5 +189,6 @@
   @media (max-width: $mobile-width) {
     margin-left: 3.5rem;
     padding-top: 2rem;
+    padding-left: 0;
   }
 }
